--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -26,5 +26,5 @@ button {
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #7dd181;
 }
